// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractorMarker Snapshot should match snapshot when not selected and not verified 1`] = `
<View
  accessibilityLabel="Contractor marker"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": false,
    }
  }
  onTouchEnd={[MockFunction]}
  style={
    [
      {
        "alignItems": "center",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#222222",
        "borderRadius": 20,
        "borderWidth": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 10,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-person"
    >
      person
      -
      20
      -
      #222222
    </Text>
  </View>
</View>
`;

exports[`ContractorMarker Snapshot should match snapshot when not selected and verified 1`] = `
<View
  accessibilityLabel="Contractor marker, verified"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": false,
    }
  }
  onTouchEnd={[MockFunction]}
  style={
    [
      {
        "alignItems": "center",
      },
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#222222",
        "borderRadius": 20,
        "borderWidth": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 10,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-person"
    >
      person
      -
      20
      -
      #222222
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#222222",
        "borderColor": "#FFFFFF",
        "borderRadius": 8,
        "borderWidth": 2,
        "height": 16,
        "justifyContent": "center",
        "position": "absolute",
        "right": -2,
        "top": -2,
        "width": 16,
      }
    }
  >
    <Text
      testID="icon-checkmark"
    >
      checkmark
      -
      8
      -
      #FFFFFF
    </Text>
  </View>
</View>
`;

exports[`ContractorMarker Snapshot should match snapshot when selected and not verified 1`] = `
<View
  accessibilityLabel="Contractor marker"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": true,
    }
  }
  onTouchEnd={[MockFunction]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "backgroundColor": "#222222",
        "transform": [
          {
            "scale": 1.2,
          },
        ],
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#222222",
        "borderRadius": 20,
        "borderWidth": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 10,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-person"
    >
      person
      -
      20
      -
      #FFFFFF
    </Text>
  </View>
</View>
`;

exports[`ContractorMarker Snapshot should match snapshot when selected and verified 1`] = `
<View
  accessibilityLabel="Contractor marker, verified"
  accessibilityRole="button"
  accessibilityState={
    {
      "selected": true,
    }
  }
  onTouchEnd={[MockFunction]}
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "backgroundColor": "#222222",
        "transform": [
          {
            "scale": 1.2,
          },
        ],
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#222222",
        "borderRadius": 20,
        "borderWidth": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 10,
        "width": 40,
      }
    }
  >
    <Text
      testID="icon-person"
    >
      person
      -
      20
      -
      #FFFFFF
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#222222",
        "borderColor": "#FFFFFF",
        "borderRadius": 8,
        "borderWidth": 2,
        "height": 16,
        "justifyContent": "center",
        "position": "absolute",
        "right": -2,
        "top": -2,
        "width": 16,
      }
    }
  >
    <Text
      testID="icon-checkmark"
    >
      checkmark
      -
      8
      -
      #FFFFFF
    </Text>
  </View>
</View>
`;
